--- a/src/Services/Catalog/Catalog.API/appsettings.json
+++ b/src/Services/Catalog/Catalog.API/appsettings.json
@@ -1,7 +1,9 @@
 {
-
     "ConnectionStrings": {
         "Database": "Server=localhost;Port=5432;Database=CatalogDb;User Id=postgres;Password=postgres;Include Error Detail=true"
+        // server=localhost, za slucaj kad Catalog.API nije u Docker stavljena, vec kad je runujem preko Visual Studio 
+        // Database=CatalogDb mora se poklopiti sa catalogdb POSTGRES_DB u docker-compose.override.yml jer bazu koristim in Docker uvek za Catalog service
+        // 5432 je  port preko koga Catalog.API u localhost rezimu komunicira sa CatalogDB koji je uvek u docker rezimu. U docker-compose.override.yml sam definisao port preko kog CatalogDb container komunicira sa Catalog localhost
     },
     "Logging": {
         "LogLevel": {
