--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -1,7 +1,9 @@
 {
     "ConnectionStrings": {
         "Database": "Server=localhost;Port=5433;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true",
-        "Redis": "localhost:6379"
+        // 5433, jer to je port preko koga Basket service in localhost rezimu komunicira sa BasketDb koji je uvek in Docker, a njegov port definisem u docker-compose.overrride.yml
+        // Ostalo objasnjeno u Catalog appsettings.json
+        "Redis": "localhost:6379" // localhost koristi Basket service in localhost rezimu da prica sa Redis koji je u Docker a ciji port je 6379
     },
     "GrpcSettings": {
         "DiscountUrl": "https://localhost:5052"
