--- a/src/Services/Catalog/Catalog.API/Properties/launchSettings.json
+++ b/src/Services/Catalog/Catalog.API/Properties/launchSettings.json
@@ -16,7 +16,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:5050;http://localhost:5000"
+      "applicationUrl": "https://localhost:5050;http://localhost:5000" // Ports koje Catalog.API koristi da primi HTTP Request from client
     },
     "IIS Express": {
       "commandName": "IISExpress",
