--- a/src/Services/Discount/Discount.gRPC/appsettings.json
+++ b/src/Services/Discount/Discount.gRPC/appsettings.json
@@ -1,6 +1,7 @@
 {
     "ConnectionStrings": {
         "Database": "Data Source=discountdb"
+            // Ovo je SQLite i pravi se kada migracija se uradi
     },
     "Logging": {
         "LogLevel": {
