--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -7,7 +7,7 @@
     },
     "GrpcSettings": {
         "DiscountUrl": "https://localhost:5052" // Za Discount https port
-    },
+    }, // Jer Basket koristi RabbitMQ 
     "MessageBroker": {
         "Host": "ampq://localhost:5672",
         "UserName": "guest",
