--- a/src/Services/Ordering/Ordering.API/appsettings.json
+++ b/src/Services/Ordering/Ordering.API/appsettings.json
@@ -7,6 +7,7 @@
         "UserName": "guest",
         "Password": "guest"
     },
+    // Pogledaj u OrderCreatedEventHandler objasnjenje za ovo
     "FeatureManagement": {
         "OrderFullfilment":  true
     },
