--- a/src/ApiGateways/YarpApiGateway/appsettings.Local.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.Local.json
@@ -6,8 +6,7 @@
         }
     },
     "AllowedHosts": "*",
-    /*Pravim appsettings.local.json u koji stavljam sve sto je bilo u appsettings localhost https://localhost:port 
-     dok appsettings.json ostavljam za docker jer u njemu ne moze localhost:port. */
+    // Pogledaj u appsettings.json zasto je ovo napravljeno
     "ReverseProxy": {
         "Routes": {
             "catalog-route": {
@@ -33,17 +32,18 @@
                 "RateLimiterPolicy": "fixed", // Jer u Program.cs pise "fixed" - ovo sam mogao dodati i u ostale rute da sam hteo
                 "Match": {
                     "Path": "/ordering-service/{**catch-all}"
-                    // catch-all sve https://localhost:5055/ordering-service/Endpoint_Route_Basket rutira na https://localhost:6003/Endpoint_Route_Basket
+                    // catch-all sve https://localhost:5055/ordering-service/Endpoint_Route_Basket rutira na https://localhost:6003/Endpoint_Route_Ordering
                     // 5055 je https port za YARP 
                 },
                 "Transforms": [ { "PathPattern": "{**catch-all}" } ]
             }
         },
+        // Nema Discount jer to poziva se iz Basket
         "Clusters": {
             "catalog-cluster": {
                 "Destinations": {
                     "destination1": {
-                        "Address": "http://localhost:6000/" // Koristim http, da ne trazi SSL za https
+                        "Address": "http://localhost:6000/" // Koristim http, da ne trazi SSL za https jer ne umem da namestim
                     }
                 }
             },
