--- a/src/ApiGateways/YarpApiGateway/appsettings.json
+++ b/src/ApiGateways/YarpApiGateway/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "AllowedHosts": "*",
-    /*Pravim appsettings.local.json za isto ovo, samo https://localhost:port route jer ovaj appsettings
+    /*Pravim appsettings.local.json za isto ovo, samo https://localhost:port route ce biti tamo, jer ovaj appsettings
      ostavljam za docker jer u njemu ne moze localhost:port. */
     "ReverseProxy": {
         "Routes": {
@@ -14,7 +14,7 @@
                 "ClusterId": "catalog-cluster",
                 "Match": {
                     "Path": "/catalog-service/{**catch-all}"
-                    // catch-all sve https://localhost:5055/catalog-service/Endpoint_Route_Catalog rutira na https://localhost:6000/Endpoint_Route_Catalog
+                    // catch-all sve https://localhost:5055/catalog-service/Endpoint_Route_Catalog rutira na http://catalog.api:8080/Endpoint_Route_Catalog
 
                 },
                 "Transforms": [ { "PathPattern": "{**catch-all}" } ]
@@ -23,7 +23,7 @@
                 "ClusterId": "basket-cluster",
                 "Match": {
                     "Path": "/basket-service/{**catch-all}"
-                    // catch-all sve https://localhost:5055/basket-service/Endpoint_Route_Basket rutira na https://localhost:6001/Endpoint_Route_Basket
+                    // catch-all sve https://localhost:5055/basket-service/Endpoint_Route_Basket rutira na http://basket.api:8080/Endpoint_Route_Basket
                     // 5055 je https port za YARP 
                 },
                 "Transforms": [ { "PathPattern": "{**catch-all}" } ]
@@ -33,18 +33,21 @@
                 "RateLimiterPolicy": "fixed", // Jer u Program.cs pise "fixed" - ovo sam mogao dodati i u ostale rute da sam hteo
                 "Match": {
                     "Path": "/ordering-service/{**catch-all}"
-                    // catch-all sve https://localhost:5055/ordering-service/Endpoint_Route_Basket rutira na https://localhost:6003/Endpoint_Route_Basket
+                    // catch-all sve https://localhost:5055/ordering-service/Endpoint_Route_Basket rutira na http://basket.api:8080/Endpoint_Route_Ordering
                     // 5055 je https port za YARP 
                 },
                 "Transforms": [ { "PathPattern": "{**catch-all}" } ]
             }
         },
-        // U clusters samo address modifikujem da bude docker container : dokcer_port umesto localhost:local_port 
+        // Nema Discount jer to poviza se iz Basket
+
+        // U clusters samo Address modifikujem da bude docker_container:dokcer_port umesto localhost:local_port 
+        // docker_container pogledam u docker-compose.yml
         "Clusters": {
             "catalog-cluster": {
                 "Destinations": {
                     "destination1": {
-                        "Address": "http://catalog.api:8080/" // Koristim http, da ne trazi SSL za https
+                        "Address": "http://catalog.api:8080/" // Koristim http, da ne trazi SSL za https jer ne umem da namestim
                     }
                 }
             },
